554614:TISCSS-51:Alignment issue in billing address in one page checkout journey

--- a/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-blue/css/onePageCheckout.css
+++ b/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-blue/css/onePageCheckout.css
@@ -4489,6 +4489,9 @@ div.radio {
     /* margin-bottom: 5px; */
     padding-left: 10px;
 }
+.cart.wrapper .left-block .payments.tab-view .new-card fieldset .full {
+	padding-left: 0;	/* TISCSS-51 */
+}
 .controls {
     padding-left: 0 !important;
 }
